[gd_scene load_steps=2 format=3 uid="uid://s4fukyhv4dny"]

[ext_resource type="Script" path="res://objects/time_node.gd" id="1_xhnfe"]

[node name="TimeNode" type="PanelContainer"]
offset_left = 448.0
offset_top = 416.0
offset_right = 506.0
offset_bottom = 456.0
script = ExtResource("1_xhnfe")

[node name="_" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Hours" type="VBoxContainer" parent="_"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hours_plus" type="Button" parent="_/Hours"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="hours" type="Label" parent="_/Hours"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hours_min" type="Button" parent="_/Hours"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="_"]
layout_mode = 2
text = ":"

[node name="minutes" type="VBoxContainer" parent="_"]
layout_mode = 2
size_flags_horizontal = 3

[node name="minutes_plus" type="Button" parent="_/minutes"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="minutes" type="Label" parent="_/minutes"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="minutes_min" type="Button" parent="_/minutes"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="delete" type="Button" parent="_"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "X"

[connection signal="pressed" from="_/Hours/hours_plus" to="." method="_on_hours_plus_pressed"]
[connection signal="pressed" from="_/Hours/hours_min" to="." method="_on_hours_min_pressed"]
[connection signal="pressed" from="_/minutes/minutes_plus" to="." method="_on_minutes_plus_pressed"]
[connection signal="pressed" from="_/minutes/minutes_min" to="." method="_on_minutes_min_pressed"]
[connection signal="pressed" from="_/delete" to="." method="_on_delete_pressed"]
